--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />
 
     <EditText
+        android:hint="@string/phone_label"
         android:id="@+id/phone_wrapper"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
@@ -44,6 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/name_wrapper" />
 
     <EditText
+        android:hint="@string/password_label"
         android:id="@+id/password_wrapper"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
@@ -54,6 +56,7 @@
         app:layout_constraintTop_toBottomOf="@+id/phone_wrapper" />
 
     <EditText
+        android:hint="@string/email_label"
         android:id="@+id/email_wrapper"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
@@ -64,6 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
+        android:hint="@string/name_label"
         android:id="@+id/name_wrapper"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
