--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".MainActivity">
     <!--File for review-->
     <TextView
         android:id="@+id/textView3"
@@ -20,8 +20,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        style="@style/LabelOnPage"
         android:id="@+id/username_label"
+        style="@style/LabelOnPage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
