--- a/app/src/main/res/drawable/circle_corner_sign_in.xml
+++ b/app/src/main/res/drawable/circle_corner_sign_in.xml
@@ -3,6 +3,7 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="8dp" />
+            <gradient android:startColor="@color/white" android:endColor="#5bd1de" android:angle="270"/>
         </shape>
     </item>
 </selector>
