--- a/app/src/main/res/layout/fragment_load.xml
+++ b/app/src/main/res/layout/fragment_load.xml
@@ -4,21 +4,23 @@
     android:layout_height="match_parent"
     tools:context="ua.lviv.iot.andriy_popov.mobiledev.Load">
     <!--File for review-->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <pl.droidsonroids.gif.GifImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/load"/>
-            <TextView
-                android:textSize="18sp"
-                android:layout_marginLeft="20dp"
-                android:gravity="center_vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/load" />
-        </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <pl.droidsonroids.gif.GifImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/load" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:gravity="center_vertical"
+            android:text="@string/load"
+            android:textSize="18sp" />
+    </LinearLayout>
 
 
 </FrameLayout>
